небольшие исправления в уровнях доступа у методов классов (укрепление инкапсуляции)